--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 name: Justin Beckwith's 53 Bytes 
+description: Just another technology blog.
+url: http://jbeckwith.com
 pygments: true
-permalink: pretty
-
+permalink: /:year/:month/:day/:title/
+excerpt_separator: "\r\n\r\n\r\n"
