--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
-name: Justin Beckwith's 53 Bytes
+name: Justin Beckwith
 description: Just another technology blog.
 url: http://jbeckwith.com
+paginate: 5
 highlighter: null
 permalink: /:year/:month/:day/:title/
 excerpt_separator: "\r\n\r\n\r\n"
