--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 name: Justin Beckwith
-description: Just another technology blog.
+description: Just a guy singing the gospel of JavaScript on the server.
 url: http://jbeckwith.com
 paginate: 5
 highlighter: null
 permalink: /:year/:month/:day/:title/
 excerpt_separator: "\r\n\r\n\r\n"
+gems: [jekyll-paginate]
